# ArcTrade

./: .gitignore  Anchor.toml  Arcium.toml  README.md  crank.cjs  package-lock.json  package.json  tsconfig.json
artifacts/: circuits_hash.txt
encrypted-ixs/circuits/: mod.rs  private_trading.rs
encrypted-ixs/src/: lib.rs
frontend/: App.jsx  backend-setup.mjs  index.html  main.jsx  package-lock.json  package.json  patch-arcium.mjs  test-arcis.mjs  test-idl.js  tsconfig.json  vite.config.js
frontend/app/components/common/: CustomCursor.jsx  Logo.jsx  Sparkline.jsx
frontend/app/components/layout/: AppShell.jsx  Sidebar.jsx  TopBar.jsx
frontend/app/components/portfolio/: HistoryList.jsx  OrdersList.jsx  PositionsList.jsx  SummaryCards.jsx  TradeHistory.jsx
frontend/app/components/privacy/: DarkPoolModeToggle.jsx  EncryptionStatus.jsx  MEVProtectionBadge.jsx  PrivacyBadge.jsx  (+2 more)
frontend/app/hooks/: useCursor.js  useMatching.js  usePrices.js  useSettlement.js  useToast.js  useWallet.js
frontend/app/pages/: DashboardPage.jsx  LandingPage.jsx  SettingsPage.jsx  TradePage.jsx
frontend/app/styles/: globals.css
frontend/app/utils/: constants.ts  format.js  idl.json  navigation.js
programs/private_trading/: Cargo.toml
programs/private_trading/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/private_trading/src/instructions/: callback.rs  cancel_order.rs  check_liquidation.rs  common.rs  init.rs  match_orders.rs  mod.rs  place_order.rs  settle_trade.rs  update_position.rs
programs/private_trading/src/state/: mod.rs
tests/: private_trading.ts
(+4 files in other folders)
